--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed by Dilli,Sriram,Sarath </h1>
+    <h1>This is developed by Ravi,Satish,Deepak </h1>
     <p class="lead">Welcome Simplilearn Development team</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
